---
source: sql-tests/tests/tests.rs
expression: query_result
---
 id | schema_name | resolution | retention | should_refresh 
----+-------------+------------+-----------+----------------
(0 rows)

 exists 
--------
 f
(1 row)

DO
CALL
 id | schema_name | resolution | retention | should_refresh 
----+-------------+------------+-----------+----------------
  1 | ds_5m       | 00:05:00   | 30 days   | t
(1 row)

 exists 
--------
 t
(1 row)

 id | downsample_id | metric_id | refresh_pending 
----+---------------+-----------+-----------------
(0 rows)

 id | metric_name | table_name | creation_completed | default_chunk_interval | retention_period | default_compression | delay_compression_until | table_schema | series_table | is_view | view_refresh_interval | downsample_id 
----+-------------+------------+--------------------+------------------------+------------------+---------------------+-------------------------+--------------+--------------+---------+-----------------------+---------------
  1 | test        | test       | f                  | t                      |                  | t                   |                         | prom_data    | test         | f       |                       |              
(1 row)

CALL
 id | metric_name | table_name | creation_completed | default_chunk_interval | retention_period | default_compression | delay_compression_until | table_schema | series_table | is_view | view_refresh_interval | downsample_id 
----+-------------+------------+--------------------+------------------------+------------------+---------------------+-------------------------+--------------+--------------+---------+-----------------------+---------------
  1 | test        | test       | f                  | t                      |                  | t                   |                         | prom_data    | test         | f       |                       |              
  2 | test        | test       | t                  | t                      |                  | t                   |                         | ds_5m        | test         | t       | 00:05:00              |             1
(2 rows)

 id | downsample_id | metric_id | refresh_pending 
----+---------------+-----------+-----------------
  1 |             1 |         1 | f
(1 row)

 update_downsampling_state 
---------------------------
 
(1 row)

 id | schema_name | resolution | retention | should_refresh 
----+-------------+------------+-----------+----------------
  1 | ds_5m       | 00:05:00   | 30 days   | f
(1 row)

 update_downsampling_state 
---------------------------
 
(1 row)

 id | schema_name | resolution | retention | should_refresh 
----+-------------+------------+-----------+----------------
  1 | ds_5m       | 00:05:00   | 30 days   | t
(1 row)

psql:testdata/metric_downsampling.sql:41: NOTICE:  drop cascades to 2 other objects
DETAIL:  drop cascades to view ds_5m.test
drop cascades to view ds_5m.q_test
CALL
 id | schema_name | resolution | retention | should_refresh 
----+-------------+------------+-----------+----------------
(0 rows)

 id | downsample_id | metric_id | refresh_pending 
----+---------------+-----------+-----------------
(0 rows)

 id | metric_name | table_name | creation_completed | default_chunk_interval | retention_period | default_compression | delay_compression_until | table_schema | series_table | is_view | view_refresh_interval | downsample_id 
----+-------------+------------+--------------------+------------------------+------------------+---------------------+-------------------------+--------------+--------------+---------+-----------------------+---------------
  1 | test        | test       | f                  | t                      |                  | t                   |                         | prom_data    | test         | f       |                       |              
(1 row)

 exists 
--------
 f
(1 row)


